IDE related changes.
These changes are workspace related, so these files may be ignored in
the future.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 #
-# OMNeT++/OMNEST Makefile for BitTorrentSingleProcessor
+# OMNeT++/OMNEST Makefile for EbitSim
 #
 # This file was generated with the command:
-#  opp_makemake -f --deep -I/home/pevangelista/programs/boost_1_43_0 -I/home/pevangelista/programs/smc_6_0_1/lib/C++ -I../../inet-20111118/src/networklayer/rsvp_te -I../../inet-20111118/src/transport/tcp -I../../inet-20111118/src/util -I../../inet-20111118/src/applications/tcpapp -I../../inet-20111118/src/world -I../../inet-20111118/src/transport/sctp -I../../inet-20111118/src/networklayer/ldp -I../../inet-20111118/src/transport/contract -I../../inet-20111118/src/networklayer/mpls -I../../inet-20111118/src/networklayer/ted -I../../inet-20111118/src/base -I../../inet-20111118/src/linklayer/mfcore -I../../inet-20111118/src/networklayer/common -I../../inet-20111118/src/transport/udp -I../../inet-20111118/src/applications/pingapp -I../../inet-20111118/src/networklayer/ipv4 -I../../inet-20111118/src/networklayer/ipv6 -I../../inet-20111118/src/networklayer/arp -I../../inet-20111118/src/networklayer/icmpv6 -I../../inet-20111118/src/linklayer/contract -I../../inet-20111118/src/util/headerserializers -I../../inet-20111118/src/networklayer/contract -L../../inet-20111118/out/$(CONFIGNAME)/src -linet -KINET_20111118_PROJ=../../inet-20111118
+#  opp_makemake -f --deep -Xlogs -I/Users/pevangelista/Work/omnetpp-workspace/boost_1_46_1 -I/Users/pevangelista/Work/omnetpp-workspace/smc_6_0_1/lib/C++ -I../../inet-20111118/src/networklayer/rsvp_te -I../../inet-20111118/src/transport/tcp -I../../inet-20111118/src/util -I../../inet-20111118/src/applications/tcpapp -I../../inet-20111118/src/world -I../../inet-20111118/src/transport/sctp -I../../inet-20111118/src/networklayer/ldp -I../../inet-20111118/src/transport/contract -I../../inet-20111118/src/networklayer/mpls -I../../inet-20111118/src/networklayer/ted -I../../inet-20111118/src/base -I../../inet-20111118/src/networklayer/common -I../../inet-20111118/src/linklayer/mfcore -I../../inet-20111118/src/transport/udp -I../../inet-20111118/src/applications/pingapp -I../../inet-20111118/src/networklayer/ipv4 -I../../inet-20111118/src/networklayer/ipv6 -I../../inet-20111118/src/networklayer/arp -I../../inet-20111118/src/networklayer/icmpv6 -I../../inet-20111118/src/linklayer/contract -I../../inet-20111118/src/util/headerserializers -I../../inet-20111118/src/networklayer/contract -L../../inet-20111118/out/$(CONFIGNAME)/src -linet -KINET_20111118_PROJ=../../inet-20111118
 #
 
 # Name of target to be created (-o option)
-TARGET = BitTorrentSingleProcessor$(EXE_SUFFIX)
+TARGET = EbitSim$(EXE_SUFFIX)
 
 # User interface (uncomment one) (-u option)
 USERIF_LIBS = $(ALL_ENV_LIBS) # that is, $(TKENV_LIBS) $(CMDENV_LIBS)
@@ -15,8 +15,8 @@ USERIF_LIBS = $(ALL_ENV_LIBS) # that is, $(TKENV_LIBS) $(CMDENV_LIBS)
 
 # C++ include paths (with -I)
 INCLUDE_PATH = \
-    -I/home/pevangelista/programs/boost_1_43_0 \
-    -I/home/pevangelista/programs/smc_6_0_1/lib/C++ \
+    -I/Users/pevangelista/Work/omnetpp-workspace/boost_1_46_1 \
+    -I/Users/pevangelista/Work/omnetpp-workspace/smc_6_0_1/lib/C++ \
     -I../../inet-20111118/src/networklayer/rsvp_te \
     -I../../inet-20111118/src/transport/tcp \
     -I../../inet-20111118/src/util \
@@ -28,8 +28,8 @@ INCLUDE_PATH = \
     -I../../inet-20111118/src/networklayer/mpls \
     -I../../inet-20111118/src/networklayer/ted \
     -I../../inet-20111118/src/base \
-    -I../../inet-20111118/src/linklayer/mfcore \
     -I../../inet-20111118/src/networklayer/common \
+    -I../../inet-20111118/src/linklayer/mfcore \
     -I../../inet-20111118/src/transport/udp \
     -I../../inet-20111118/src/applications/pingapp \
     -I../../inet-20111118/src/networklayer/ipv4 \
@@ -45,17 +45,8 @@ INCLUDE_PATH = \
     -Iclient/messages \
     -Iclient/other \
     -Iclient/smc \
-    -Iclient/smc/images \
     -Iclient/smc/out \
     -Icontroller \
-    -Ilogs \
-    -Ilogs/run_0 \
-    -Ilogs/run_1 \
-    -Ilogs/run_12 \
-    -Ilogs/run_2 \
-    -Ilogs/run_27 \
-    -Ilogs/run_28 \
-    -Ilogs/run_29 \
     -Inodes \
     -Itracker \
     -Itracker/connection \
@@ -76,27 +67,27 @@ O = $(PROJECT_OUTPUT_DIR)/$(CONFIGNAME)/$(PROJECTRELATIVE_PATH)
 
 # Object files for local .cc and .msg files
 OBJS = \
-    $O/client/ContentManager.o \
-    $O/client/ClientController.o \
-    $O/client/Statistics.o \
-    $O/client/Choker.o \
-    $O/client/ClientControllerSeq.o \
-    $O/client/SwarmManager.o \
     $O/client/BitTorrentClient.o \
-    $O/client/connection/PeerWireThreadUpload.o \
+    $O/client/Choker.o \
+    $O/client/ClientController.o \
+    $O/client/ClientControllerSeq.o \
+    $O/client/ContentManager.o \
+    $O/client/Statistics.o \
+    $O/client/SwarmManager.o \
     $O/client/connection/PeerWireThread.o \
-    $O/client/connection/SwarmManagerThread.o \
     $O/client/connection/PeerWireThreadConnection.o \
     $O/client/connection/PeerWireThreadDownload.o \
-    $O/client/other/TcpIp.o \
-    $O/client/other/PeerEntry.o \
+    $O/client/connection/PeerWireThreadUpload.o \
+    $O/client/connection/SwarmManagerThread.o \
+    $O/client/other/BitField.o \
     $O/client/other/DataRateRollingAverage.o \
     $O/client/other/NumberBitField.o \
+    $O/client/other/PeerEntry.o \
     $O/client/other/RarestPieceCounter.o \
-    $O/client/other/BitField.o \
-    $O/client/smc/out/UploadSM_sm.o \
+    $O/client/other/TcpIp.o \
     $O/client/smc/out/ConnectionSM_sm.o \
     $O/client/smc/out/DownloadSM_sm.o \
+    $O/client/smc/out/UploadSM_sm.o \
     $O/controller/DataSimulationControl.o \
     $O/controller/SimulationController.o \
     $O/nodes/GlobalStatistics.o \
@@ -104,18 +95,18 @@ OBJS = \
     $O/tracker/connection/PeerConnectionThread.o \
     $O/tracker/other/PeerInfo.o \
     $O/client/messages/Application_m.o \
-    $O/client/messages/PeerWireMsgBundle_m.o \
     $O/client/messages/PeerWire_m.o \
-    $O/tracker/messages/AnnounceResponseMsg_m.o \
-    $O/tracker/messages/AnnounceRequestMsg_m.o
+    $O/client/messages/PeerWireMsgBundle_m.o \
+    $O/tracker/messages/AnnounceRequestMsg_m.o \
+    $O/tracker/messages/AnnounceResponseMsg_m.o
 
 # Message files
 MSGFILES = \
     client/messages/Application.msg \
-    client/messages/PeerWireMsgBundle.msg \
     client/messages/PeerWire.msg \
-    tracker/messages/AnnounceResponseMsg.msg \
-    tracker/messages/AnnounceRequestMsg.msg
+    client/messages/PeerWireMsgBundle.msg \
+    tracker/messages/AnnounceRequestMsg.msg \
+    tracker/messages/AnnounceResponseMsg.msg
 
 # Other makefile variables (-K)
 INET_20111118_PROJ=../../inet-20111118
@@ -164,16 +155,14 @@ endif
 #------------------------------------------------------------------------------
 
 # Main target
-all: $(TARGET)
-
-$(TARGET) : $O/$(TARGET)
+all: $O/$(TARGET)
 	$(LN) $O/$(TARGET) .
 
 $O/$(TARGET): $(OBJS)  $(wildcard $(EXTRA_OBJS)) Makefile
 	@$(MKPATH) $O
-	$(CXX) $(LDFLAGS) -o $O/$(TARGET)  $(OBJS) $(EXTRA_OBJS) $(WHOLE_ARCHIVE_ON) $(LIBS) $(WHOLE_ARCHIVE_OFF) $(OMNETPP_LIBS)
+	$(CXX) $(LDFLAGS) -o $O/$(TARGET)  $(OBJS) $(EXTRA_OBJS) $(AS_NEEDED_OFF) $(WHOLE_ARCHIVE_ON) $(LIBS) $(WHOLE_ARCHIVE_OFF) $(OMNETPP_LIBS)
 
-.PHONY:
+.PHONY: all clean cleanall depend msgheaders
 
 .SUFFIXES: .cc
 
@@ -188,24 +177,15 @@ msgheaders: $(MSGFILES:.msg=_m.h)
 
 clean:
 	-rm -rf $O
-	-rm -f BitTorrentSingleProcessor BitTorrentSingleProcessor.exe libBitTorrentSingleProcessor.so libBitTorrentSingleProcessor.a libBitTorrentSingleProcessor.dll libBitTorrentSingleProcessor.dylib
+	-rm -f EbitSim EbitSim.exe libEbitSim.so libEbitSim.a libEbitSim.dll libEbitSim.dylib
 	-rm -f ./*_m.cc ./*_m.h
 	-rm -f client/*_m.cc client/*_m.h
 	-rm -f client/connection/*_m.cc client/connection/*_m.h
 	-rm -f client/messages/*_m.cc client/messages/*_m.h
 	-rm -f client/other/*_m.cc client/other/*_m.h
 	-rm -f client/smc/*_m.cc client/smc/*_m.h
-	-rm -f client/smc/images/*_m.cc client/smc/images/*_m.h
 	-rm -f client/smc/out/*_m.cc client/smc/out/*_m.h
 	-rm -f controller/*_m.cc controller/*_m.h
-	-rm -f logs/*_m.cc logs/*_m.h
-	-rm -f logs/run_0/*_m.cc logs/run_0/*_m.h
-	-rm -f logs/run_1/*_m.cc logs/run_1/*_m.h
-	-rm -f logs/run_12/*_m.cc logs/run_12/*_m.h
-	-rm -f logs/run_2/*_m.cc logs/run_2/*_m.h
-	-rm -f logs/run_27/*_m.cc logs/run_27/*_m.h
-	-rm -f logs/run_28/*_m.cc logs/run_28/*_m.h
-	-rm -f logs/run_29/*_m.cc logs/run_29/*_m.h
 	-rm -f nodes/*_m.cc nodes/*_m.h
 	-rm -f tracker/*_m.cc tracker/*_m.h
 	-rm -f tracker/connection/*_m.cc tracker/connection/*_m.h
@@ -216,7 +196,7 @@ cleanall: clean
 	-rm -rf $(PROJECT_OUTPUT_DIR)
 
 depend:
-	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile -P\$$O/ -- $(MSG_CC_FILES)  ./*.cc client/*.cc client/connection/*.cc client/messages/*.cc client/other/*.cc client/smc/*.cc client/smc/images/*.cc client/smc/out/*.cc controller/*.cc logs/*.cc logs/run_0/*.cc logs/run_1/*.cc logs/run_12/*.cc logs/run_2/*.cc logs/run_27/*.cc logs/run_28/*.cc logs/run_29/*.cc nodes/*.cc tracker/*.cc tracker/connection/*.cc tracker/messages/*.cc tracker/other/*.cc
+	$(MAKEDEPEND) $(INCLUDE_PATH) -f Makefile -P\$$O/ -- $(MSG_CC_FILES)  ./*.cc client/*.cc client/connection/*.cc client/messages/*.cc client/other/*.cc client/smc/*.cc client/smc/out/*.cc controller/*.cc nodes/*.cc tracker/*.cc tracker/connection/*.cc tracker/messages/*.cc tracker/other/*.cc
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 $O/client/BitTorrentClient.o: client/BitTorrentClient.cc \
