--- a/simulations/MultiplePeers.ini
+++ b/simulations/MultiplePeers.ini
@@ -345,7 +345,7 @@ output-vector-precision = 2
 #**.r1.eth[*].queue.**.vector-recording = true
 #**.r2.eth[*].queue.**.vector-recording = true
 #**.eth.**.vector-recording = true
-output-vectors-memory-limit = 16GB
+#output-vectors-memory-limit = 16GiB
 
 **.scalar-recording = false
 **.vector-recording = false
