--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-
-.csettings
-
 out
-
-src/EbitSim
-
-src/logs
-
 *_m.cc
-
 *_m.h
+/Makefile.vc
+/Makefile
+/.project
+/.oppbuildspec
+/.nedfolders
+/.cproject
+/.computed
+/.csettings
+/.settings
