Change the name of the basic network configurations.
Correct the running script and the configuration files.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -4,7 +4,7 @@
 [Config Base]
 network = BasicTopology
 sim-time-limit = 1200s
-description = "The parent network extended by the other scenarios based on Seeders_xM_Peers_xN"
+description = "The parent network extended by the other scenarios based on BasicTopology"
 
 ## Ethernet
 #**.mac[*].txQueueLimit = 100000
@@ -27,10 +27,10 @@ description = "The parent network extended by the other scenarios based on Seede
 
 
 ###
-### Extends the MultiplePeersBase and configure a network for studying variable
+### Extends the Base and configure a network for studying variable
 ### seeder:leecher ratios
 ###
-[Config SimpleTopologyTest]
+[Config SimpleTopology]
 extends = Base
 description = "Experiment run with different number of seeders and peers"
 experiment-label = "Varying Number of Peers"
