Finish the transition from the local to the global ClientController.
The ClientController now sends the user messages directly to the
SwarmManagers using the sendDirect function. The gate userCommand was
added to the SwarmManager, and is the entry point for the
ClientController messages. The previous version used direct method
calling. Also, update the configuration files to work with the new
architecture.

--- a/simulations/BasicConfig.ini
+++ b/simulations/BasicConfig.ini
@@ -40,11 +40,15 @@ measurement-label = "${p} Peers, ${seederPerc} Seeder proportion"
 
 ## Factors
 # Exponential arrival, for simple testing
-**.clientController.startTime =  uniform(1s, 10s)
+*.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test1']")
+*.clientController.seederPercentage = ${seederPerc=0.1, 0.5, 0.9}
+*.clientController.startTime =  10s
+*.clientController.trackerAddress = "tracker"
+*.clientController.trackerPort = 8082
+
 **.mac.txrate = 1000Mbps # bandwidth
 *.numPeers = ${p=5,100..1000 step 100}
 # seeder/peer ratio
-*.peer[*].bitTorrentApp.clientController.seeder = ancestorIndex(2)/${p} < ${seederPerc=0.1, 0.5, 0.9}
 seed-set = ${repetition}
 #repeat = 10
 
@@ -58,8 +62,6 @@ seed-set = ${repetition}
 # The contents available in the tracker
 **.trackerApp.contents = xmldoc("../simulations/BTContents.xml", "contentList")
 # The contents downloaded by the clients
-*.peer[*].bitTorrentApp.clientControllerModule = "ClientController"
-*.peer[*].bitTorrentApp.clientController.profile = xmldoc("../simulations/BTProfiles.xml","profileList/profile[@name='test3']")
 # processing time configured with the histogram with 55 bins
 *.peer[*].bitTorrentApp.bitTorrentClient.processingTimeHistogram = "../simulations/hist_55bin.dat"
 # Thruput calculated whenever 50 packets are transfered or every 100ms
@@ -70,17 +72,21 @@ seed-set = ${repetition}
 
 ## Statistics
 # enable recordings by module
-#**.bitTorrentApp.**.scalar-recording = true
+BasicTopology.*.vector-recording = true
+BasicTopology.*.scalar-recording = true
+**.bitTorrentApp.**.scalar-recording = true
 **.bitTorrentApp.**.vector-recording = true
-#**.peer[*].eth.thruputMeterDL.**.vector-recording = true
-#**.peer[*].eth.thruputMeterUL.**.vector-recording = true
-#**.eth[*].queue.vector-recording = true
-#**.eth[*].queue.*.scalar-recording = true
-#**.swarmManager.**.scalar-recording = true
-**.routerThruput.eth[*].queue.*.scalar-recording = true
-**.routerThruput.eth[*].queue.*.vector-recording = true
-Seeders_xM_Peers_xN.*.vector-recording = true
-Seeders_xM_Peers_xN.*.scalar-recording = true
+#**.routerThruput.eth[*].queue.*.scalar-recording = true
+#**.routerThruput.eth[*].queue.*.vector-recording = true
+
+# The eth and arp modules also save statistics
+#**.eth.**.vector-recording = false
+#**.eth.**.scalar-recording = false
+#**.eth[*].**.vector-recording = false
+#**.eth[*].**.scalar-recording = false
+#**.arp.**.vector-recording = false
+#**.arp.**.scalar-recording = false
+
 # disable all recordings that are not explicitly defined
 **.scalar-recording = false
 **.vector-recording = false
